# Mimi-Mod-Subway-Surface-City

./: .clang-format  .editorconfig  .gitattributes  .gitignore  LICENSE  README.md
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mod/loader/: ModLoader.java
android/app/src/main/res/values/: strings.xml
android/jni/: CMakeLists.txt
desktop/: CMakeLists.txt  app.manifest  compile.bat  main.cpp
docs/: ARCHITECTURE.md  BUILDING.md
patches/: ModLoader$1$1.smali  ModLoader$1$2.smali  ModLoader$1.smali  ModLoader.smali
scripts/: build_all.bat  build_android_apk.bat  build_android_native.bat  build_desktop.bat  build_modloader.bat  extract_split_libs.ps1  fetch_toolchain.bat  gen_build_stamp.ps1  local.env.bat.example  patch_manifest.ps1  setup_deps.bat
src/: jni_entry.cpp
src/core/config/: config.cpp
src/core/features/: features.cpp
src/core/hooks/: gl_hooks.cpp  inline_hook.cpp  inline_hook.hpp
src/core/il2cpp/: il2cpp_bridge.cpp  il2cpp_bridge.hpp  il2cpp_rva.hpp  unlocks.cpp  unlocks.hpp
src/core/menu/: menu_renderer.cpp
src/core/platform/: android_bridge.cpp  android_bridge.hpp
src/core/runtime/: runtime_state.cpp  runtime_state.hpp
src/include/: config.h  hooks.h  menu.h  mod_features.h
src/ui/: menu_root.cpp  menu_root.hpp  scale.cpp  scale.hpp  tokens.hpp
src/ui/fonts/: font_data.h  font_noto.h  fonts.cpp  fonts.hpp  icons.hpp
src/ui/fx/: animation.cpp  animation.hpp  glitch.cpp  glitch.hpp  ticker.cpp  ticker.hpp
src/ui/i18n/: README.md  lang.cpp  lang.hpp  lang_data.hpp
src/ui/layout/: app_shell.cpp  app_shell.hpp  fqa_dock.cpp  fqa_dock.hpp  sheet.cpp  sheet.hpp  stat_row.cpp  stat_row.hpp  tab_bar.cpp  tab_bar.hpp  toast.cpp  toast.hpp  top_banner.cpp  top_banner.hpp
src/ui/sections/: sections.cpp  sections.hpp
src/ui/state/: mod_state.cpp  mod_state.hpp
src/ui/widgets/: about.cpp  about.hpp  cards.cpp  cards.hpp  color_picker.cpp  color_picker.hpp  heading.cpp  heading.hpp  hero_card.cpp  hero_card.hpp  numpad.cpp  numpad.hpp  primitives.cpp  primitives.hpp
